<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context=".GraficaFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/largeSpace"
        android:scrollbars="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:id="@+id/txt_grafica_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/smallSpace"
            tools:text="Azucar Estandar" />

        <LinearLayout
            android:layout_marginVertical="@dimen/smallSpace"
            android:gravity="center_horizontal"
            android:id="@+id/layGraficaTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/txt_grafica_descripcion">



            <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_gravity="bottom"
                android:id="@+id/txt_grafica_precio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/smallSpace"

                tools:text="$38" />

            <TextView
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:id="@+id/txt_grafica_unidad"
                android:layout_gravity="bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Pesos / 2kg" />

        </LinearLayout>

        <TextView
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:id="@+id/txt_grafica_periodo"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/smallSpace"
            tools:text="Historico de precios al 04 de junio del 2021" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/layGraficaBotones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/smallSpace"
            android:gravity="center"
            android:orientation="horizontal"
            app:checkedButton="@id/btn_grafica_10dias"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_grafica_10dias"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_grafica_btn_10D" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_grafica_1mes"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_grafica_btn_1M" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_grafica_6meses"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_grafica_btn_6M" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_grafica_todo"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/string_grafica_btn_todo" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:minHeight="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/largeSpace"
            app:layout_constraintBottom_toTopOf="@id/adView"
            app:layout_constraintTop_toBottomOf="@+id/layGraficaBotones" />

        <com.google.android.gms.ads.AdView
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/adView"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="@dimen/addsize"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/string_adUnitId"
            />
    </LinearLayout>
    </ScrollView>
</layout>